tests/errors/alfa/semantic_error4.alfa
//****Error semantico en lin X: Operacion logica con operandos int.
main
{
    int x, y ;
    boolean a,b; 

    x=1;
    x=2;
    a=true;
    a=false;

    a = x&&y;
}    